# fetch-project

./: .gitignore  README.md  pyproject.toml
sql/: close_ended_1.sql  close_ended_1b.sql  open_ended_2.sql  open_ended_3.sql  open_ended_3b.sql
src/: part1__data_exploration.py  part1_readme.md  part2__run_sql.py  part3__interesting_findings.py
