[tool.poetry]
name = "fetch-project"
version = "0.1.0"
description = ""
authors = ["'Michelle Bedard'"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
numpy = "^2.2.4"
plotly = "^6.0.1"
nbformat = "^5.10.4"
duckdb = "^1.2.2"
scipy = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
